--- a/base/package.json
+++ b/base/package.json
@@ -7,6 +7,7 @@
   "types": "bin/index.d.ts",
   "scripts": {
     "build": "rimraf dist && tsc",
+    "build:browser": "esbuild ./src/index.ts --bundle --minify --sourcemap  --outfile=bin/browser.min.js",
     "prepublish": "rimraf dist && tsc"
   },
   "private": false,
@@ -28,7 +29,8 @@
     "@types/socket.io-client": "^3.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "esbuild": "^0.14.18"
   },
   "dependencies": {
     "socket.io-client": "^4.4.0"
